fix(web): add correct spacing in empty state example

--- a/packages/web/src/app/doc-pages/patterns/empty-states-doc/empty-states-full-page-example/empty-states-full-page-example.component.scss
+++ b/packages/web/src/app/doc-pages/patterns/empty-states-doc/empty-states-full-page-example/empty-states-full-page-example.component.scss
@@ -16,4 +16,8 @@
   align-items: center;
   justify-content: center;
   gap: 48px;
+
+  @include breakpoints.breakpoint-up(Mobile) {
+    gap: 24px;
+  }
 }
